--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             <a href="examples/17-game/17-game.html">
                 17 - Game example
             </a>
+            <br><br>
+            <a href="examples/90-gltf/90-gltf.html">
+                90 - gltf
+            </a>
         </li>
         
     </ul>
