--- a/examples/90-gltf/90-gltf.html
+++ b/examples/90-gltf/90-gltf.html
@@ -13,8 +13,15 @@
     <div class="overlay">
         <a class="back" href="../../index.html">Back</a>
     </div>
+    <div class="coins">
+        <h3 id="coin">Collect COINS!</h3>
+    </div>
+    <div class="popUp">
+        <h2 id="door"></h2>
+    </div>
     <div class="fullscreen">
-        <canvas></canvas>
+        <canvas>    
+        </canvas>
     </div>
 </body>
 </html>
