--- a/index.html
+++ b/index.html
@@ -7,27 +7,37 @@
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-    <h1>ES6/WebGL 2.0 examples</h1>
-    <p>
-        This is a collection of ES6/WebGL 2.0 examples for undergraduate courses on computer graphics.
+    <h1>Deaf Adventure</h1>
 
-        <br><br>
 
-        Laboratory for Computer Graphics and Multimedia<br>
-        Faculty of Computer and Information Science<br>
-        University of Ljubljana<br>
-    </p>
-    <h2>List of examples:</h2>
     <ul>
         
         <li>
-            <a href="examples/17-game/17-game.html">
-                17 - Game example
-            </a>
             <br><br>
             <a href="examples/90-gltf/90-gltf.html">
-                90 - gltf
+                StartGame
             </a>
+            <br><br><br><br>
+            <a>
+                Move: W, A, S, D
+            </a>
+            <br><br>
+            <a>
+                Interact: E
+            </a>
+            <br><br>
+            <a>
+                Jump: Space
+            </a>
+            <br><br>
+            <a>
+                Sprint: LShift
+            </a>
+            <br><br>
+            <a>
+                Increase, Decrese light: F, G
+            </a>
+            <br><br>
         </li>
         
     </ul>
