Final Update, we did it boizzz

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-    <h1>Deaf Adventure</h1>
+    <h1>Cave Adventure</h1>
 
 
     <ul>
@@ -15,29 +15,27 @@
         <li>
             <br><br>
             <a href="examples/90-gltf/90-gltf.html">
-                StartGame
+                Start Game
             </a>
             <br><br><br><br>
-            <a>
+            <p>
+                Controls
+            </p>
+            <p>
                 Move: W, A, S, D
-            </a>
-            <br><br>
-            <a>
+            </p>
+            <p>
                 Interact: E
-            </a>
-            <br><br>
-            <a>
+            </p>
+            <p>
                 Jump: Space
-            </a>
-            <br><br>
-            <a>
+            </p>
+            <p>
                 Sprint: LShift
-            </a>
-            <br><br>
-            <a>
+            </p>
+            <p>
                 Increase, Decrese light: F, G
-            </a>
-            <br><br>
+            </p>
         </li>
         
     </ul>
