--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ES6/WebGL 2.0 examples</title>
+    <title>(Deaf) Cave Adventure</title>
 
     <link rel="stylesheet" type="text/css" href="common/style.css">
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-    <h1>Cave Adventure</h1>
+    <h1>(Deaf) Cave Adventure</h1>
 
 
     <ul>
