--- a/examples/90-gltf/90-gltf.html
+++ b/examples/90-gltf/90-gltf.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>90 - Loading glTF files - ES6/WebGL 2.0 Examples</title>
+    <title>(Deaf) Cave Adventure</title>
 
     <link rel="stylesheet" type="text/css" href="../../common/style.css">
 
